DataViewer/log.txt
  File "Twitter/Spark_MLcurr.py", line 129
    exit()
         ^
IndentationError: unindent does not match any outer indentation level
